# Banking-UI

./: .gitignore  App.qml  CMakeLists.txt  Main.qml  README.md  main.cpp  tcp_server_test.py
Src/Common/: ModuleFactory.cpp  StartupManager.cpp
Src/Common/Components/: CommonResource.qrc  SplashScreen.qml
Src/Common/Interfaces/: IModule.h  IModule.hpp
Src/Common/inc/: ModuleFactory.hpp  ModuleNames.hpp  StartupManager.hpp
Src/Modules/: CMakeLists.txt
Src/Modules/Communications/: BankingSocket.cpp  CMakeLists.txt  CommunicationInitializer.cpp
Src/Modules/Communications/inc/: BankingSocket.hpp  CommunicationInitializer.hpp
Src/Modules/Login/: LoginModulePlan.md
Src/Resource/Images/: IconsResource.qrc
Src/Resource/Json/: JsonResource.qrc  modules.json
